catalytic_table_to_struct/example/src/non_compiling_code/failing_wrong_type_vec.stderr
error[E0277]: the trait bound `Vec<i32>: From<{integer}>` is not satisfied
 --> src/non_compiling_code/failing_wrong_type_vec.rs
  |
  |     query!("select * from test_table where b = 1 and c in ?", a);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<{integer}>` is not implemented for `Vec<i32>`
  |
  = help: the following other types implement trait `From<T>`:
            `Vec<T, A>` implements `From<BinaryHeap<T, A>>`
            `Vec<T, A>` implements `From<Box<[T], A>>`
            `Vec<T, A>` implements `From<VecDeque<T, A>>`
            `Vec<T>` implements `From<&[T; N]>`
            `Vec<T>` implements `From<&[T]>`
            `Vec<T>` implements `From<&mut [T; N]>`
            `Vec<T>` implements `From<&mut [T]>`
            `Vec<T>` implements `From<Cow<'_, [T]>>`
          and $N others
  = note: this error originates in the macro `query` (in Nightly builds, run with -Z macro-backtrace for more info)
